<resources>
    <string name="app_name">App_Sustentavel</string>
    <string name="Base">Base para outros elementos</string>
    <string name="imgbtn_home">Ícone home</string>
    <string name="imgbtn_video">Ícone vídeo</string>
    <string name="imgbtn_perfil">Ícone Perfil</string>
    <string name="img_pet">Imagem dos pets</string>
    <string name="scr_base">Scroll View base para os elementos</string>
    <string name="img_dog">Cachorro</string>
    <string name="img_cat">Gato</string>
    <string name="img_video">Capa do vídeo</string>
    <string name="img_mais">Ver Mais</string>
    <string name="txt_inicio">CONNECTPET</string>
    <string name="txt_ola">Olá</string>
    <string name="txt_descapp">Conheça o app para você se conectar com seu pet!</string>
    <string name="txt_bem_vindo">Seja Bem Vindo!</string>
    <string name="txt_cuidado">DICAS DE CUIDADO</string>
    <string name="txt_vermais">Ver Mais</string>
    <string name="txt_socorro">PRIMEIROS SOCORROS</string>
    <string name="txt_tutoriais">TUTORIAIS</string>
    <string-array name="array_tipo">
        <item>Selecione</item>
        <item>Engasgo</item>
        <item>Queimadura</item>
        <item>Fratura</item>
        <item>Intoxicação</item>
        <item>Corte</item>
    </string-array>
    <string name="tipo_animal">Tipo do animal</string>
    <string name="titulo_desc">DESCRIÇÃO</string>
    <string name="titulo_ali">ALIMENTAÇÃO</string>
    <string name="titulo_higi">HIGIENE</string>
    <string name="titulo_saude">SAÚDE</string>
    <string name="titulo_dica">DICAS</string>
    <string name="descricao_dog">Os cachorros são animais domésticos populares que podem ser uma fonte de companhia e alegria. No entanto, é importante ter em mente que os cachorros são criaturas sociais e requerem cuidados específicos para manter sua saúde e bem-estar.</string>
    <string name="aliment_dog">Os cachorros são animais onívoros, portanto, sua dieta deve ser composta de uma variedade de alimentos, incluindo carne, vegetais e frutas. É importante oferecer ao seu cachorro uma ração de qualidade, adequada à sua idade, porte e nível de atividade. Você também pode oferecer petiscos de frutas e verduras frescas. Em geral, precisam de uma dieta rica em proteína e baixa em carboidratos. Eles devem comer ração seca ou úmida, além de petiscos.</string>
    <string name="aliment_dog2">Os cachorros precisam de água fresca e limpa em abundância disponível em todos os momentos.</string>
    <string name="higiene_dog">Os cachorros precisam de banhos regulares para manter sua pelagem limpa e saudável. A frequência com que você deve dar banho no seu cachorro depende da raça, do tipo de pele e do nível de atividade. Em geral, cachorros de pelo curto podem ser banhados a cada 4-6 semanas, enquanto cachorros de pelo longo podem precisar de banhos a cada 2-4 semanas.</string>
    <string name="saude_dog">Os cachorros precisam de visitas regulares ao veterinário. Eles devem ser vacinados contra a raiva, a parvovirose, a hepatite infecciosa canina e a leptospirose. A frequência das vacinas dependerá da idade do cachorro e do seu estilo de vida.</string>
    <string name="saude_dog2">Além disso, precisam de vermífugos regulares para evitar a infestação por parasitas.</string>
    <string name="dica_dog1">- O adestramento é importante para ensinar ao seu cachorro bons hábitos e evitar comportamentos indesejáveis.</string>
    <string name="dica_dog2">- A castração é um procedimento cirúrgico que remove os órgãos reprodutivos do cachorro. É importante castrar o seu cachorro para evitar doenças e comportamentos indesejáveis, como fugas e agressividade.</string>
    <string name="dica_dog3">- Interaja com seu cachorro regularmente. Os cachorros são animais sociais e precisam de atenção e interação. Passe algum tempo com seu cachorro todos os dias para fortalecer o vínculo entre vocês.</string>
    <string name="descricao_cat">Os gatos são animais domésticos populares que podem ser uma fonte de companhia e alegria. No entanto, é importante ter em mente que os gatos são criaturas independentes e requerem cuidados específicos para manter sua saúde e bem-estar.</string>
    <string name="aliment_cat">Os gatos são animais carnívoros, portanto, sua dieta deve ser baseada em carne. É importante oferecer ao seu gato uma ração de qualidade, adequada à sua idade, porte e nível de atividade. É necessário uma dieta rica em proteínas e baixa em carboidratos. Eles devem comer ração seca ou úmida, além de petiscos.</string>
    <string name="aliment_cat2">Esses felinos precisam de água fresca e limpa em abundância disponível em todos os momentos.</string>
    <string name="higiene_cat">Os gatos são animais muito higiênicos e se limpam regularmente. No entanto, é importante escovar os dentes do seu gato regularmente para evitar o acúmulo de placa e tártaro. Você também pode limpar as orelhas do seu gato com um algodão úmido para remover a sujeira e a cera. </string>
    <string name="higiene_cat2">As unhas do seu gato devem ser aparadas a cada 2-3 semanas.</string>
    <string name="saude_cat">Eles também precisam de visitas regulares ao veterinário. Eles devem ser vacinados contra a raiva, a panleucopenia felina, a rinotraqueíte felina e a clamidiose felina.</string>
    <string name="saude_cat2">Além disso, precisam de vermífugos regulares para evitar a infestação por parasitas. </string>
    <string name="dica_cat1">- Os mesmos precisam de uma caixa de areia limpa e confortável para fazer suas necessidades. A caixa de areia deve ser trocada regularmente e deve estar em um local tranquilo e discreto.</string>
    <string name="dica_cat2">- A castração é um procedimento cirúrgico que remove os órgãos reprodutivos do cachorro. É importante castrar o seu pet para evitar doenças e comportamentos indesejáveis, como fugas e agressividade.</string>
    <string name="dica_cat3">- Ofereça ao seu gato uma variedade de brinquedos, como bolas, ratos de pelúcia e arranhadores.</string>
    <string name="descricao_aves">As aves são animais domésticos populares que podem ser uma fonte de companhia e alegria. No entanto, é importante ter em mente que as aves são criaturas delicadas e requerem cuidados específicos para manter sua saúde e bem-estar.</string>
    <string name="aliment_aves">São animais onívoros, portanto, sua dieta deve ser composta de uma variedade de alimentos, incluindo sementes, frutas, verduras e legumes. É importante oferecer à sua ave uma ração de qualidade, adequada à sua espécie, idade e nível de atividade. Você também pode oferecer petiscos de frutas e verduras frescas.</string>
    <string name="aliment_aves2">Esse tipo de animal doméstico precisa de água fresca e limpa em abundância disponível em todos os momentos.</string>
    <string name="higiene_aves">As aves precisam de banhos regulares para manter suas penas limpas e saudáveis. A frequência dos banhos dependerá da espécie da ave e do tipo de plumagem. É importante usar produtos específicos para aves.</string>
    <string name="saude_aves">Eles também precisam de visitas regulares ao veterinário. Eles devem ser vacinados contra a raiva, a panleucopenia felina, a rinotraqueíte felina e a clamidiose felina.</string>
    <string name="saude_aves2"> A gaiola da sua ave deve ser limpa regularmente para evitar a propagação de doenças. Você deve limpar a gaiola pelo menos uma vez por semana e trocar a cama todos os dias.</string>
    <string name="dica_aves1">- A gaiola da sua ave deve ser grande o suficiente para que ela possa se movimentar livremente e ter espaço para se exercitar. A gaiola deve ser feita de um material resistente e deve ser fácil de limpar. Você também deve fornecer à sua ave uma variedade de brinquedos para se divertir e se exercitar.</string>
    <string name="dica_aves2">- As aves podem ser treinadas para uma variedade de tarefas, como aprender truques e responder a comandos. O adestramento é uma ótima maneira de fortalecer o vínculo entre você e sua ave.</string>
    <string name="dica_aves3">- Você deve levar sua ave ao veterinário para exames de rotina pelo menos uma vez por ano.</string>
    <string name="descricao_coelho">Os coelhos são animais domésticos populares que podem ser uma fonte de companhia e alegria. No entanto, é importante ter em mente que os coelhos são criaturas delicadas e requerem cuidados específicos para manter sua saúde e bem-estar.</string>
    <string name="aliment_coelho">São animais herbívoros, portanto, precisam de uma dieta rica em fibra e baixa em gordura. Eles devem comer feno o dia todo, além de vegetais frescos e pellets. Você também pode oferecer petiscos de vegetais frescos, como cenoura, alface e espinafre.</string>
    <string name="aliment_coelho2">Esse tipo de animal doméstico precisa de água fresca e limpa em abundância disponível em todos os momentos.</string>
    <string name="higiene_coelho">Em média, coelhos não precisam de banhos. Eles são animais muito higiênicos e se limpam regularmente, lambendo sua pelagem. Dar banhos em coelhos pode danificar sua pelagem e pele, pois eles não produzem óleo natural para protegê-los da água.</string>
    <string name="higiene_coelho2">As unhas do seu coelho precisam ser aparadas regularmente para evitar que cresçam demais e causem desconforto ao coelho. Você pode aparar as unhas do seu coelho com um alicate especial para coelhos.</string>
    <string name="saude_coelho">O pet deve ser levado ao veterinário para exames de rotina pelo menos uma vez por ano. Esses exames podem ajudar a detectar problemas de saúde precocemente e garantir que o coelho esteja recebendo o tratamento adequado.</string>
    <string name="saude_coelho2">Coelhos devem ser vacinados contra as doenças mais comuns, como a mixomatose e a coqueluche.</string>
    <string name="dica_coelho1">- A castração ou esterilização é recomendada para coelhos de estimação. Ela pode ajudar a reduzir o risco de câncer e outros problemas de saúde, além de melhorar o comportamento do coelho.</string>
    <string name="dica_coelho2">- É importante fornecer ao coelho alimentos duros para mastigar, como feno e vegetais, para ajudar a desgastar os dentes, já que os mesmos crescem continuamente.</string>
    <string name="dica_coelho3">- Os coelhos precisam de pelo menos 2 horas de exercícios por dia. Você pode deixar seu coelho correr pela casa ou levá-lo para passear em um cinto.</string>
    <string name="rotulo_video">Tutoriais</string>
    <string name="titulo_materiais">Tipos de Materiais</string>
    <string name="titulo_populares">Populares</string>
    <string name="titulo_video">Titulo do video</string>
    <string name="titulo_categoria">Categoria</string>
    <string name="categoria_papelao">Papelão</string>
    <string name="categoria_plastico">Plástico</string>
    <string name="categoria_tecido">Tecido</string>
    <string name="categoria_papel">Papel</string>
    <string name="titulo_categoria1">Papelão</string>
    <string name="titulo_categoria2">Tecido</string>
    <string name="titulo_categoria3">Papel</string>
    <string name="titulo_categoria4">Plástico</string>
    <string name="rotulo_cadastro">Cadastro</string>
    <string name="nome_cad">Digite seu nome:</string>
    <string name="nome_exe">Nome</string>
    <string name="sobrenome_cad">Digite seu último nome: </string>
    <string name="sobrenome_exe">Sobrenome</string>
    <string name="id_cad">Digite um nome de usuário: </string>
    <string name="id_exe">\@pet231</string>
    <string name="email_cad">Digite seu email: </string>
    <string name="email_exe">example1@email.com</string>
    <string name="telefone_cad">Digite seu número de telefone: </string>
    <string name="telefone_exe">(DD) XXXXX - XXXX</string>
    <string name="cadastrar_dados">Cadastrar</string>
</resources>