<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Cadastro">

    <LinearLayout
        android:id="@+id/LLbase"
        android:layout_width="match_parent"
        android:layout_height="687dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/LLnavbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LLrotulo"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/txt_nome_cad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:letterSpacing="0.1"
            android:text="@string/nome_cad"
            android:textColor="@color/gray_blue"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_txt_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:hint="@string/nome_exe"
            android:inputType="text"
            android:textSize="14sp"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/txt_sobrenome_cad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:letterSpacing="0.1"
            android:text="@string/sobrenome_cad"
            android:textColor="@color/gray_blue"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_txt_sobrenome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:hint="@string/sobrenome_exe"
            android:inputType="text"
            android:textSize="14sp"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/txt_id_cad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:letterSpacing="0.1"
            android:text="@string/id_cad"
            android:textColor="@color/gray_blue"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_txt_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:hint="@string/id_exe"
            android:inputType="text"
            android:textSize="14sp"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/txt_email_cad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:letterSpacing="0.1"
            android:text="@string/email_cad"
            android:textColor="@color/gray_blue"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:hint="@string/email_exe"
            android:inputType="text|textEmailAddress"
            android:textSize="14sp"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/txt_telefone_cad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:letterSpacing="0.1"
            android:text="@string/telefone_cad"
            android:textColor="@color/gray_blue"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_txt_telefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:hint="@string/telefone_exe"
            android:inputType="phone"
            android:textSize="14sp"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btn_cadastrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="240dp"
            android:layout_marginTop="20dp"
            android:text="@string/cadastrar_dados" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LLnavbar"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintBounds">

        <LinearLayout
            android:id="@+id/LLicones"
            android:layout_width="280dp"
            android:layout_height="60dp"
            android:background="@drawable/nav_bar"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <ImageButton
                android:id="@+id/imgbtn_home"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:contentDescription="@string/imgbtn_home"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageButton
                android:id="@+id/imgbtn_video"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:contentDescription="@string/imgbtn_video"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageButton
                android:id="@+id/imgbtn_perfil"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:contentDescription="@string/imgbtn_perfil"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LLrotulo"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/fundo_r_tulo"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintBounds">

        <TextView
            android:id="@+id/txt_rotulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rotulo_cadastro"
            android:textSize="20sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>